# RTMP

src/androidTest/java/com/example/rtmpsuc/: ExampleInstrumentedTest.java
src/main/: AndroidManifest.xml
src/main/cpp/: AndroidLog.h  CMakeLists.txt  GCallJava.cpp  GCallJava.h  GQueue.cpp  GQueue.h  RecordBuffer.cpp  RecordBuffer.h  RtmpPush.cpp  RtmpPush.h  gpush.cpp  native-lib.cpp
src/main/java/com/example/glivepush/: AudioRecordActivity.java  CameraActivity.java  ImgVideoActivity.java  LivePushActivity.java  MainActivity.java  OpenSLESActivity.java  VideoActivity.java  YuvActivity.java
src/main/java/com/example/glivepush/audioRcord/: AudioRecordUtil.java
src/main/java/com/example/glivepush/camera/: GCamera.java  GCameraFboRender.java  GCameraRender.java  GCameraView.java
src/main/java/com/example/glivepush/egl/: EglHelper.java  GEGLSurfaceView.java  GShaderUtil.java
src/main/java/com/example/glivepush/encodec/: GBaseMediaEncoder.java  GEncodecRender.java  GMediaEncodec.java
src/main/java/com/example/glivepush/imgvideo/: GImgVideoFboRender.java  GImgVideoRender.java  GImgVideoView.java
src/main/java/com/example/glivepush/push/: AudioRecordUtil.java  BasePushEncoder.java  (+4 more)
src/main/res/layout/: activity_audio_record.xml  activity_camera.xml  activity_imgvideo.xml  activity_live_push.xml  activity_main.xml  activity_open_sles.xml  activity_video.xml  activity_yuv.xml
src/main/res/raw/: fragment_shader.glsl  fragment_shader_yuv.glsl  vertex_shader_yuv.glsl
src/main/res/values/: strings.xml
src/test/java/com/example/rtmpsuc/: ExampleUnitTest.java
(+4 files in other folders)
